# light-cut-soundz

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml  ci.yml  fire.yml  release.yml  ship-impl.yml  ship.yml  test-both-triggers.yml  test-dispatch.yml
docs/: app.js  index.html  style.css
snap/: snapcraft.yaml
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs
src-tauri/src/ops/: fade.rs  filter.rs  normalize.rs  speed.rs  trim.rs
